<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundedimg"
        tools:context=".MainActivity">
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/t_size"
            android:textColor="@color/tcolor"
            android:text="@string/tname"
            android:id="@+id/txtname"
    />

    <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/location_img"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txtname"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_location"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/t_size"
            android:text="@string/tlocation"
            android:id="@+id/txtlocation"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txtname"
            app:layout_constraintLeft_toRightOf="@+id/location_img"
    />

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/txtname" android:textSize="@dimen/follow_size" android:text="@string/follow" android:id="@+id/followbtn" android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/location_img" android:layout_marginLeft="20dp" android:background="@drawable/rounded_btn"/>

    <ImageView android:layout_height="180dp" android:layout_width="160dp" android:id="@+id/profile" android:src="@drawable/mtk" android:background="@drawable/roundedimg" app:layout_constraintBaseline_toBaselineOf="@+id/followbtn" app:layout_constraintRight_toRightOf="parent"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/location_img" android:textStyle="bold" android:textSize="@dimen/psize" android:text="@string/po" android:id="@+id/txt134" android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/followbtn" android:layout_marginLeft="30dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/txt134" android:textStyle="bold" android:textSize="@dimen/follow_size" android:text="@string/f" android:id="@+id/txt1256" android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/followbtn" android:layout_marginLeft="100dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/txt134" android:textSize="@dimen/psize" android:text="@string/posts" android:id="@+id/posts" app:layout_constraintTop_toBottomOf="@+id/txt134"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:textSize="@dimen/fsize"
              android:text="@string/follower"
              android:id="@+id/follow"
              android:layout_marginLeft="50dp"
              app:layout_constraintLeft_toRightOf="@+id/posts"
              app:layout_constraintTop_toBottomOf="@+id/txt1256"
    />

    <ImageView android:layout_height="100dp" android:layout_width="80dp" app:layout_constraintLeft_toLeftOf="@+id/txtname" android:id="@+id/img1" android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/posts" android:src="@drawable/baby" app:layout_constraintHorizontal_chainStyle="packed"/>

    <ImageView android:layout_height="100dp" android:layout_width="80dp" android:id="@+id/img2" android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/posts" android:src="@drawable/color" app:layout_constraintLeft_toRightOf="@+id/img1"/>

    <ImageView android:layout_height="100dp" android:layout_width="80dp" android:id="@+id/img3" android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/posts" android:src="@drawable/cookie" app:layout_constraintLeft_toRightOf="@+id/img2"/>

    <ImageView android:layout_height="100dp"
               android:layout_width="80dp"
               android:id="@+id/img4"
               android:layout_marginTop="30dp"
               app:layout_constraintTop_toBottomOf="@+id/posts"
               android:src="@drawable/cuteangle"
               app:layout_constraintLeft_toRightOf="@+id/img3"/>

    <ImageView android:layout_height="100dp" android:layout_width="80dp" android:id="@+id/img5" android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/posts" android:src="@drawable/tattoo" app:layout_constraintLeft_toRightOf="@+id/img4"/>

    <ImageView
            android:layout_height="30dp"
            android:layout_width="50dp"
            app:layout_constraintLeft_toLeftOf="@+id/posts"
            android:id="@+id/linkin"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/img1"
            android:layout_marginLeft="9dp"
            android:src="@drawable/ic_icons8_linkedin"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <ImageView
            android:layout_height="30dp"
            android:layout_width="50dp"
            android:id="@+id/facebook"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/img2"
            android:layout_marginLeft="9dp"
            android:src="@drawable/ic_icons8_facebook"
            app:layout_constraintLeft_toRightOf="@+id/linkin"
            />

    <ImageView
            android:layout_height="30dp"
            android:layout_width="50dp"
            android:id="@+id/youtube"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/img3"
            android:layout_marginLeft="9dp"
            android:src="@drawable/ic_icons8_youtube"
            app:layout_constraintLeft_toRightOf="@+id/facebook"/>

    <ImageView android:layout_height="30dp" android:layout_width="50dp" android:id="@+id/behance" android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/img4" android:layout_marginLeft="9dp" android:src="@drawable/ic_icons8_behance" app:layout_constraintLeft_toRightOf="@+id/youtube"/>

    <ImageView android:layout_height="30dp" android:layout_width="50dp" android:id="@+id/twitter" android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/img5" android:layout_marginLeft="22dp" android:src="@drawable/ic_icons8_twitter" app:layout_constraintLeft_toRightOf="@+id/behance"/>

    <ImageView android:layout_height="wrap_content" android:layout_width="fill_parent" app:layout_constraintLeft_toLeftOf="@id/img1" android:id="@+id/line" android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/linkin" android:background="@drawable/roundedline" android:scaleType="fitXY"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/txtname" android:textStyle="bold" android:textSize="30sp" android:text="About" android:id="@+id/about" android:layout_marginTop="@dimen/dimen_20dp" app:layout_constraintTop_toBottomOf="@+id/line"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/txtname" android:textSize="@dimen/csize" android:text="@string/con" android:id="@+id/conclusion" app:layout_constraintTop_toBottomOf="@+id/about"/>



</androidx.constraintlayout.widget.ConstraintLayout>